# rust-sokoban

./: .gitignore  Cargo.toml  build-windows.sh
assets/: .gitignore
assets/levels/: levels.ron  main_menu.tmx  overlay.tmx  template.tmx  test.tmx  untitled.tmx  untitled2.tmx
assets/levels/basic/: plus.tmx  room.tmx  room2.tmx
assets/levels/colors/: swap.tmx  swap2.tmx  swap3.tmx  swap4.tmx  swap5.tmx  tutorial.tmx
assets/levels/holes/: alt_route.tmx  cliff.tmx  pit.tmx  pit2.tmx  pit3.tmx  roundabout.tmx  roundabout2.tmx  tutorial.tmx  tutorial0.tmx  tutorial2.tmx
assets/levels/tutorial/: bricks.tmx  manouvering.tmx  manouvering2.tmx  movement.tmx  multiple_goals.tmx
assets/sound/: ATTRIBUTION.md
assets/tilesheets/: icons.tsx  sokoban_tilesheet.tsx
assets_src/: icons.psd
src/: asset_manager.rs  assets.rs  context.rs  input_system.rs  level.rs  lib.rs  main.rs  map.rs  quadarray.rs  sound_manager.rs  sprite_atlas.rs  state.rs  tilesheet.rs  ui.rs
src/context/: level_completion_db.rs  save_data.rs
src/graphics/: mod.rs  quadmesh.rs  sprite_atlas.rs  tilesheet.rs
src/level/: action.rs  error.rs  mod.rs  objects.rs  player.rs  tilemap.rs
src/level/objects/: mod.rs  parsing.rs
src/state/: level_select.rs  playing.rs  transitioning.rs
src/state/level_select/: mod.rs  ui.rs
