[package]
name = "sokoban"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tiled = { git = "https://github.com/rusty-pizza/rs-tiled" }
anyhow = "1.0"
thiserror = "1.0"
rand = "0.8.5"
ron = "0.7.1"
serde = { version = "1", features = ["derive"] }
pathdiff = "0.2.1"
directories = "4.0.1"
env_logger = "0.9.0"
log = "0.4.17"
rodio = "0.15.0"

[dependencies.sfml]
git = "https://github.com/jeremyletang/rust-sfml"
features = ["graphics", "audio"]
rev = "19b5e1082fbb58d7c1646eef32cb6fd01353c9d3"
