[package]
name = "sokoban"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
editor = ["guiedit", "guiedit_derive"]

[dependencies]
tiled = { git = "https://github.com/rusty-pizza/rs-tiled" }
anyhow = "1.0"
thiserror = "1.0"
rand = "0.8.5"
ron = "0.7.1"
serde = { version = "1", features = ["derive"] }
pathdiff = "0.2.1"
directories = "4.0.1"
env_logger = "0.9.0"
log = "0.4.17"
sfml = { version = "0.18.1", features = ["graphics", "audio"] }
guiedit = { git = "https://github.com/aleokdev/guiedit", optional = true }
guiedit_derive = { git = "https://github.com/aleokdev/guiedit", optional = true }
