[package]
name = "sokoban"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ggez = "0.9.3"
tiled = "0.12.0"
anyhow = "1.0"
thiserror = "1.0"
rand = "0.8.5"
ron = "0.8.1"
serde = { version = "1", features = ["derive"] }
pathdiff = "0.2.1"
directories = "4.0.1"
env_logger = "0.11.3"
log = "0.4.17"
sfml = { version = "0.21.0", features = ["graphics", "audio"] }
